added header2 class to main tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- main area -->
-    <main class="hero">
+    <main class="hero header2">
         <!-- Header begins here -->
 
         <header class="container">
@@ -54,6 +54,8 @@
                 </li>
                 
             </ul>
+
+
 
             <!-- hamburger menu -->
             <div class="hamburger-menu" onclick="openMenu()">
