--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="hero header2">
         <!-- Header begins here -->
 
-        <header class="container">
+        <header class="container container2">
 
             <!-- brand/logo -->
             <p class="brand">
