login-register2 added

--- a/account.html
+++ b/account.html
@@ -89,7 +89,7 @@
 
 
 <!--login/registration-->
-<section class="login-register">
+<section class="login-register login-register2">
     <div class="container flex">
         <section class="login">
             <form action="">
